--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -10,7 +10,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
         />
-    <fragment class="uco374386.movio2.pv256.fi.muni.cz.filmovarka.MovieFragment"
+    <FrameLayout
               android:id="@+id/details"
               android:layout_weight="1"
               android:layout_width="match_parent"
