--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -4,6 +4,7 @@
              android:layout_height="wrap_content">
 
     <ImageView
+        android:id="@+id/movie_item_image"
         android:background="@color/colorPrimary"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -12,29 +13,41 @@
         android:src="@drawable/placeholder"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/movie_item_info"
                   android:orientation="horizontal"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom"
-                  android:id="@+id/movie_info"
+                  android:gravity="center_vertical"
+                  android:background="#80000000"
                   android:padding="16dp">
 
 
         <TextView
-            android:id="@+id/movie_name"
+            android:id="@+id/movie_item_name"
             android:textColor="@android:color/white"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textSize="12sp"/>
+            android:textSize="15sp"/>
 
-        <TextView
-            android:id="@+id/movie_rating"
-            android:textColor="@android:color/white"
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12sp"/>
-
+            android:layout_height="wrap_content">
+            <ImageView
+                android:src="@android:drawable/btn_star_big_on"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/movie_item_rating"
+                android:textColor="@android:color/white"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"/>
+        </LinearLayout>
     </LinearLayout>
 
 </FrameLayout>
