--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -14,16 +14,17 @@
             android:id="@+id/viewA"
             android:background="@android:color/background_dark"
             android:layout_width="match_parent"
-            android:layout_height="144dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/backdrop_image"
+                android:background="@android:color/black"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:srcCompat="@android:drawable/btn_dialog"
-                android:id="@+id/imageView2"
-                android:layout_weight="1"
-                />
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
@@ -37,10 +38,9 @@
             android:weightSum="1">
 
             <ImageView
+                android:id="@+id/poster_image"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
-                android:id="@+id/imageView"
                 android:layout_weight="0.30"/>
 
             <LinearLayout
