--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -32,16 +32,14 @@
             android:id="@+id/viewB"
             android:layout_width="match_parent"
             android:layout_height="145dp"
-            android:paddingLeft="10dp"
             android:background="@color/colorPrimary"
-            android:orientation="horizontal"
-            android:weightSum="1">
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/poster_image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="0.30"/>
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                />
 
             <LinearLayout
                 android:orientation="vertical"
@@ -49,7 +47,7 @@
                 android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="0.28">
+                android:layout_weight="70">
 
                 <LinearLayout
                     android:orientation="horizontal"
@@ -63,9 +61,7 @@
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/movieTitle"
-                        android:layout_weight="1"
-                        />
+                        android:id="@+id/movieTitle"/>
 
                     <TextView
                         android:text="2016"
@@ -74,8 +70,7 @@
                         android:layout_marginLeft="10dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/movieYear"
-                        android:layout_weight="1"/>
+                        android:id="@+id/movieYear"/>
                 </LinearLayout>
 
                 <TextView
