--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -26,4 +26,12 @@
         android:visibility="gone"
         android:text="@string/no_internet_connection" />
 
+    <TextView
+        android:id="@+id/empty_view_parse_error"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="@string/parse_error" />
+
 </LinearLayout>
