--- a/app/src/main/res/layout/item_section.xml
+++ b/app/src/main/res/layout/item_section.xml
@@ -8,7 +8,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
-        android:padding="16sp"
+        android:padding="18dp"
         android:textAlignment="textStart"/>
 
 </FrameLayout>
