categories menu selection

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,25 +3,7 @@
 
     <item android:title="@string/navigation_drawer_head">
         <menu>
-            <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/nav_cat1"
-                    android:title="@string/cat1"/>
-                <item
-                    android:id="@+id/nav_cat2"
-                    android:title="@string/cat2"/>
-                <item
-                    android:id="@+id/nav_cat3"
-                    android:title="@string/cat3"/>
-                <item
-                    android:id="@+id/nav_cat4"
-                    android:title="@string/cat4"/>
-                <item
-                    android:id="@+id/nav_cat5"
-                    android:title="@string/cat5"/>
-                <item
-                    android:id="@+id/nav_cat6"
-                    android:title="@string/cat6"/>
+            <group android:checkableBehavior="all">
             </group>
         </menu>
     </item>
