--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -5,7 +5,7 @@
               android:layout_height="match_parent">
 
     <TextView
-        android:text="@string/cat1"
+        android:text="Action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
