--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -5,7 +5,7 @@
 
     <ImageView
         android:id="@+id/movie_item_image"
-        android:background="@android:color/black"
+        android:src="@drawable/backdrop_placeholder"
         android:layout_width="fill_parent"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
