--- a/app/src/main/res/layout-sw600dp/content_main.xml
+++ b/app/src/main/res/layout-sw600dp/content_main.xml
@@ -20,12 +20,20 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
+        <TextView
+            android:id="@+id/empty_view_no_internet"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:visibility="gone"
+            android:text="@string/no_internet_connection" />
         <FrameLayout
             android:id="@+id/details"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
+
 
     </LinearLayout>
 
