--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 <android.support.constraint.ConstraintLayout
@@ -13,16 +15,17 @@
 
     <ImageView
         android:id="@+id/backdrop_image"
-        android:background="@android:color/black"
+        android:src="@drawable/backdrop_placeholder"
         android:layout_width="0dp"
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
         android:layout_weight="1"
-        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteY="25dp"
         android:layout_height="wrap_content"
         android:minHeight="100dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <android.support.constraint.ConstraintLayout
@@ -44,7 +47,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/movieYear"
             app:layout_constraintLeft_toRightOf="@+id/movieDirector"
-            android:layout_marginStart="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/movieDirector"/>
 
         <TextView
@@ -75,7 +77,7 @@
 
         <android.support.constraint.Guideline
             android:layout_width="wrap_content"
-            android:layout_height="410dp"
+            android:layout_height="139dp"
             android:id="@+id/guideline2"
             app:layout_constraintGuide_begin="124dp"
             android:orientation="vertical"
